# SimpleDemoToUseGandiva

./: CMakeLists.txt  README.md  main.cpp  test_util.h
cmake/: FindArrow.cmake  FindGandiva.cmake
